<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.ui.profile.stamp.MyStampFragment">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/my_stamp_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/my_stamp_margin_top"
        android:fontFamily="@font/jeju_myeongjo"
        android:text="@string/my_stamp_text"
        android:textAppearance="?attr/textAppearanceTitleMedium"
        app:layout_constraintEnd_toStartOf="@id/my_stamp_image"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/my_stamp_image"
        android:layout_width="@dimen/my_stamp_image_size"
        android:layout_height="@dimen/my_stamp_image_size"
        android:layout_marginStart="@dimen/my_stamp_image_margin_start"
        android:src="@drawable/ic_stamp"
        app:layout_constraintBottom_toBottomOf="@id/my_stamp_num"
        app:layout_constraintEnd_toStartOf="@id/my_stamp_num"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@id/my_stamp_text"
        app:layout_constraintTop_toTopOf="@id/my_stamp_num"
        app:tint="?attr/colorPrimary"
        tools:ignore="ContentDescription" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/my_stamp_num"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/my_stamp_num_margin_start"
        android:layout_marginTop="@dimen/my_stamp_margin_top"
        android:fontFamily="@font/jeju_myeongjo"
        android:text="@string/my_stamp_num"
        android:textAppearance="?attr/textAppearanceTitleMedium"
        android:textColor="?attr/colorOnSurface"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@id/my_stamp_image"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/text_view_empty_stamp_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/empty_list"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view_stamp_list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/my_stamp_margin_top"
        android:contentDescription="@string/desc_stamp_list"
        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/my_stamp_text"
        app:spanCount="3" />
</androidx.constraintlayout.widget.ConstraintLayout>